[ENHANCEMET]ADD Properties to customers and add all foreign table data in the user detail call
